--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
             practical and professional digital solutions.
         </p>
         <section>
-        <div class="anatech">
-            <img src="AnaTech businss card.png" alt="" height="500px" width="800px">
+        <div class="responsive-img">
+            <img src="AnaTech businss card.png" alt="AnaTech Business Card" class="responsive-img">
+
         </div>
     </section>
     </section>
