--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
  <header>
   <div class="navbar">
     <h1 class="logo">
-      <img src="anacopy-removebg-preview.png" alt="Logo" class="logo-img">
+      <img src="anacopy-removebg-preview.png" alt="Logo" class="logo-img" > 
+        
     </h1>
+    
 
     <!-- Hamburger -->
+     <div class="manzi">
     <div class="menu-toggle" id="menuToggle">☰</div>
+    </div>
 
     <nav>
       <ul class="nav-links" id="navLinks">
