--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anaclet | Portfolio</title>
-    <link rel="icon" href="anacopy-removebg-preview.png">
+    <link rel="icon" href="anacopy-removebg-preview.webp">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -54,7 +54,7 @@
         </p>
         <section>
         <div class="responsive-img">
-            <img src="AnaTech businss card.png" alt="AnaTech Business Card" class="responsive-img">
+            <img src="AnaTech businss card.webp" alt="AnaTech Business Card" class="responsive-img">
 
         </div>
     </section>
